Update from https://github.com/funlessdev/funless/commit/c07f519722be5c8865d797ea97797cafcc4000b1
